Changed UserId from int to UUID, fixed withdrawal and deposit classes accordingly